# realtime_shindo

./: LICENSE  Makefile  README.md  environment.yml  job.sh  pyproject.toml  run.sh
docs/: mkdocs.yml
docs/docs/: index.md
models/lightning_logs/version_0/: epoch=81-step=70520.ckpt  events.out.tfevents.1751394542.wa23.56.0
models/lightning_logs/version_1/: epoch=24-step=21500.ckpt  epoch=90-step=39858.ckpt  events.out.tfevents.1751395168.wa30.56.0  events.out.tfevents.1751781346.wa18.56.0
models/lightning_logs/version_2/: epoch=23-step=5256.ckpt  events.out.tfevents.1752554558.wa21.56.0
models/lightning_logs/version_3/: epoch=64-step=28470.ckpt  events.out.tfevents.1751857960.wa30.56.0
realtime_shindo/: __init__.py  config.py  dataset.py  features.py  plots.py
realtime_shindo/data/: __init__.py  custom_spatiotemporal_dataset.py
realtime_shindo/datasets/: __init__.py  realtime_shindo.py
realtime_shindo/engines/: __init__.py  custom_predictor.py
realtime_shindo/modeling/: predict.py  train.py
realtime_shindo/nn/custom_models/: __init__.py
realtime_shindo/nn/custom_models/stgn/: __init__.py  time_then_space_model.py
