[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "realtime_shindo"
version = "0.0.1"
description = ":This is Realtime Shindo."
authors = [
  { name = "Gota Watanabe" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["realtime_shindo"]
include = ["pyproject.toml", "realtime_shindo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["realtime_shindo"]
force-sort-within-sections = true

